[package]
name = "less-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
less-lexer = { path = "../less-lexer" }
less-ast = { path = "../less-ast" }
less-test-data = { path = "../less-test-data" }
thiserror = { workspace = true }
log = { workspace = true }
simplelog = "^0.12.0"